--- a/style.css
+++ b/style.css
@@ -33,13 +33,7 @@ header {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #333;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 20px;
+    object-fit: cover;
     margin-right: 12px;
 }
 
